Fix chrome bug not showing tray nav

--- a/src/assets/toolkit/styles/6-components/navigation/_components.site-header-tray.scss
+++ b/src/assets/toolkit/styles/6-components/navigation/_components.site-header-tray.scss
@@ -1614,6 +1614,7 @@ body#hubv4 {
 
         .tray {
           position: fixed;
+          height: 100%;
           right: 0;
           bottom: 0;
           left: 0;
